finished some other features and this is the version we presented on the demo

--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
 .App-header {
-  background-color: #222;
+  background-color: white;
   height: 150px;
-  padding: 20px;
-  color: white;
+  padding: 40px 30px;
 }
 
-.App-intro {
-  font-size: large;
+.search_bar{
+  vertical-align: center;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+
